Fixed KNN, fixed vectors, added metrics, developed main